--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=student-management
 spring.datasource.url=jdbc:mysql://mysql-service:3306/springdb
-spring.datasource.username=root
-spring.datasource.password=root123
+spring.datasource.username=spring
+spring.datasource.password=spring123
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 
