--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://localhost:3306/studentdb?createDatabaseIfNotExist=true
+spring.datasource.url=jdbc:mysql://mysql-service:3306/studentdb
 spring.datasource.username=root
-spring.datasource.password=
-spring.jpa.show-sql=true
+spring.datasource.password=root   # ou le mot de passe réel de ton MySQL K8s
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
 
 # Server configuration :
 server.port=8089
