--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
 spring.application.name=student-management
-spring.datasource.url=jdbc:mysql://mysql-service:3306/studentdb
+spring.datasource.url=jdbc:mysql://localhost:3306/studentdb
 spring.datasource.username=root
-spring.datasource.password=root   # ou le mot de passe réel de ton MySQL K8s
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
